--- a/web/page/styles/index.css
+++ b/web/page/styles/index.css
@@ -1,47 +1,71 @@
 body {
-	  background-color: #DEDCDC;  
-    position: relative;
-	  font-family: 'Noto Sans', sans-serif;
-	  font-size: 16px;
-	  line-height: 1.4;
-	  color: #000;
-	  min-width: 320px;
-	  overflow-x: hidden;
-	  height: auto;
+	background-color: #CCD0CF;
+	margin: 0;
+	margin-top: 0;
 }
 
-.navbar {
-    width: 100%;
-    height: 70px;
-    box-shadow: 0 4px 10px #FFFFFF;
-}
-
-.navbar .container {
-    height: inherit;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+header {
+	margin: 0;
+	padding: 0;
+	background-color: #06141B;
 }
 
 .navbar-menu {
-    list-style-type: none;
-    align-items: center;
-    margin-bottom: 0;
-    display: flex;
-    flex-flow: row nowrap;
-    font-weight: 700;
-    font-size: 20px;
+	margin: 0;
+	text-align: center;
+	list-style-type: none;
 }
 
 .navbar-menu li {
-    display: inline-block;
+	display: inline;
 }
 
-.navbar-menu li a {
-    display: inline-block;
-
+.navbar-menu a {
+	color: #CCD0CF;
+	text-align: center;
+	font-size: 20px;
+	font-family: "InterTight-BoldItalic";
+	padding: 20px;
+  	text-decoration: none;
+  	font-weight: bold;
+  	display: inline-block;
 }
-  
+
 .mainlogo {
-    align-items: center;
+	align-items: center;
+	margin: 0;
 }
+
+.mainlogo img {
+	margin-top: 0px;
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.welcome {
+	background-color: #06141B;
+	margin-top: 0px;
+}
+
+.welcome h1 {
+	margin-top: 20px;
+	margin-bottom: 0px;
+	text-align: center;
+	font-size: 60px;
+	color: #CCD0CF;
+	font-family: "InterTight-ExtraLight";
+}
+
+@font-face {
+	font-family: "InterTight-BoldItalic";
+	src: url("../fonts/Inter Tight/InterTight-BoldItalic.ttf") format("truetype");
+	font-style: normal; 
+	font-weight: normal; 
+} 
+
+@font-face {
+	font-family: "InterTight-ExtraLight";
+	src: url("../fonts/Inter Tight/InterTight-Thin.ttf") format("truetype");
+	font-style: normal; 
+	font-weight: normal; 
+} 
