--- a/web/page/styles/index.css
+++ b/web/page/styles/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-	background-color: #61892F;
+	background-color: #222629;
 	margin: 0;
 	margin-top: 0;
 }
@@ -24,13 +24,14 @@ header {
 }
 
 .navbar-menu li {
-	display: inline;
+	display: inline-block;
+	width: 100%
 }
 
 .navbar-menu a {
+	width: 100%;
 	color: #C4C4C4;
 	text-align: center;
-	font-size: 20px;
 	font-family: "Mona-Sans-BlackWideItalic";
 	padding: 20px;
   	text-decoration: none;
@@ -57,8 +58,7 @@ header {
 
 .welcome {
 	background-color: #222629;
-	margin: 0px;
-	align-items: center;
+	margin: 40px 0 0 0;
 }
 
 .welcome h1 {
@@ -75,33 +75,35 @@ header {
 	font-family: "Mona-Sans-BlackWideItalic";
 }
 
+.welcome-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 0px auto 0 auto;
+}
+
 .whatiskeymasters {
-	margin: 20px;
-	padding: 20px;
-	align-items: center;
-	width: 700px;
-	display: inline-block;
-	font-size: 40px;
-	border: 5px solid #86C232;
-	border-radius: 20px;
+	margin-right: 80px;
+	margin-left: 30px;
+    font-size: 40px;
+    text-align: left;
 }
 
 .whatiskeymasters p {
-	align-items: center;
-	font-family: "IBMPlexSans-ExtraLight";
-	color: #C4C4C4;
+    font-family: "IBMPlexSans-ExtraLight";
+    color: #C4C4C4;
+	margin: 0;
 }
 
 .whatiskeymasters b {
-	color: #86C232;
-	font-family: "Mona-Sans-BlackWideItalic";
+    color: #86C232;
+    font-family: "Mona-Sans-BlackWideItalic";
 }
 
 .welcome-logo {
-	margin: 30px;
-	padding: 0;
-	background-color: aliceblue;
-	width: 400px;
+    padding: 0;
+    width: 400px;
 }
 
 @font-face {
