--- a/web/page/styles/index.css
+++ b/web/page/styles/index.css
@@ -21,11 +21,12 @@ header {
 	margin: 0;
 	text-align: center;
 	list-style-type: none;
+	font-size: 0;
 }
 
 .navbar-menu li {
 	display: inline-block;
-	width: 100%
+	width: 100%;
 }
 
 .navbar-menu a {
@@ -33,9 +34,16 @@ header {
 	color: #C4C4C4;
 	text-align: center;
 	font-family: "Mona-Sans-BlackWideItalic";
+	font-size: 20px;
 	padding: 20px;
   	text-decoration: none;
   	display: inline-block;	
+}
+
+@media (max-width: 1400px) {
+	.navbar-menu a {
+		font-size: 15px;
+	}	
 }
 
 .navbar-menu a:hover {
@@ -48,10 +56,13 @@ header {
 	align-items: center;
 	margin: 0;
 	padding: 0;
+	background-color: #61892F;
+	font-size: 0;
 }
 
 .mainlogo img {
-	margin: 0px;
+	display: block;
+	margin: auto;
 	max-width: 100%;
 	max-height: 100%;
 }
@@ -59,6 +70,7 @@ header {
 .welcome {
 	background-color: #222629;
 	margin: 40px 0 0 0;
+	font-size: 0;
 }
 
 .welcome h1 {
@@ -76,11 +88,14 @@ header {
 }
 
 .welcome-items {
+	max-width: 1728px;
+	max-height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 90%;
     margin: 0px auto 0 auto;
+	font-size: 0;
 }
 
 .whatiskeymasters {
@@ -106,9 +121,13 @@ header {
     width: 400px;
 }
 
+footer {
+	background-color: #61892F;
+}
+
 @font-face {
 	font-family: "Mona-Sans-BlackWideItalic";
-	src: url("../fonts/Mono-Sans/Mona-Sans-BlackWideItalic.otf") format("truetype");
+	src: url("../fonts/Mona-Sans/Mona-Sans-BlackWideItalic.otf") format("truetype");
 	font-style: normal; 
 	font-weight: normal; 
 } 
@@ -122,7 +141,7 @@ header {
 
 @font-face {
 	font-family: "IBMPlexSans-ExtraLight";
-	src: url("../fonts/IBM Plex/IBMPlexSans-Medium.ttf") format("truetype");
+	src: url("../fonts/IBM Plex/IBMPlexSans-Bold.ttf") format("truetype");
 	font-style: normal; 
 	font-weight: normal; 
 } 
