--- a/web/page/styles/index.css
+++ b/web/page/styles/index.css
@@ -13,7 +13,7 @@ header {
 	justify-content: center;
 	margin: 0;
 	padding: 0;
-	background-color: #222629;
+	background-color: #61892F;
 	align-items: center;
 }
 
@@ -31,7 +31,7 @@ header {
 
 .navbar-menu a {
 	width: 100%;
-	color: #C4C4C4;
+	color: #222629;
 	text-align: center;
 	font-family: "Mona-Sans-BlackWideItalic";
 	font-size: 20px;
@@ -47,8 +47,8 @@ header {
 }
 
 .navbar-menu a:hover {
-	color: #222629;
-	background-color: #86C232;
+	color: #86C232;;
+	background-color: #222629;
 	transition: all 0.15s ease;
 }
 
