--- a/web/page/styles/index.css
+++ b/web/page/styles/index.css
@@ -122,7 +122,7 @@ header {
 	align-items: center;
 	margin: 0;
 	padding: 0;
-	background-color: #61892F;
+	background-color: #222629;
 	font-size: 0;
 }
 
@@ -196,6 +196,7 @@ header {
 	margin: 0 auto 0 auto;
 	font-size: 3.5vw;
 	font-family: "SuisseIntl-Book";
+	color: #C4C4C4;
 }
 
 footer {
